* bug 1413: fasta importer should report progress within a file * ImportHelper got new constructors accepting a File instead of a Reader. This allows a) closing the file on EOF (previously in many locations FileReaders were created and not closed until garbage collection) and b) estimating the read progress in the file (currently with a flaw: each character is assumed to be one byte) * some importers (e.g. fasta) now use the new ImportHelper constructor so that their files will be closed on EOF. The Fasta importer also reports progress through the file now (bug 1413) * ImmidiateSequenceImporter was renamed to ImmediateSequenceImporter and a progress listener added. This is the only API change that may potentially brake other clients of jebl. Discussed with Matt.
git-svn-id: http://svn.code.sf.net/p/jebl/code/trunk@465 6721810a-1124-0410-938e-bb277542c816